update: recommended place info